--- a/pages/popup.html
+++ b/pages/popup.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<link href="/css/bootstrap.css" rel="stylesheet">
-		<link href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet">
+		<link href="/css/bootstrap-responsive.css" rel="stylesheet">
 		<link href="/css/select2.css" rel="stylesheet">
 		<link href="/css/main.css" rel="stylesheet">
 		<script src="/js/jquery.js"></script>
@@ -21,7 +21,7 @@
 		<div class="modal hide" id="alertModal">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal">
-					x
+					×
 				</button>
 				<h3>Alert</h3>
 			</div>
