--- a/pages/popup.html
+++ b/pages/popup.html
@@ -8,6 +8,7 @@
 		<script src="/js/bootstrap-dropdown.js"></script>
 		<script src="/js/bootstrap-modal.js"></script>
 		<script src="/js/bootstrap-button.js"></script>
+		<script src="/js/bootstrap-carousel.js"></script>
 		<script src="/js/select2.js"></script>
 		<script src="/js/popup.js"></script>
 	</head>
